// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Parser detects async automatically 1`] = `
Object {
  "exports": Array [
    "function getDevicePrice() {
    return easy.domElements.waitFor({ selector: '.device-price' }).then(function (els) {
        return site.utils.extractPrice(els[0].textContent);
    });
}",
  ],
  "imports": Array [
    "getDevicePrice",
  ],
  "samples": Array [
    Object {
      "examples": Array [
        Object {
          "async": 1,
          "code": "location.href = 'http://www.play.pl/telefony/glosniki/glosnik-jabra-speak-410/?oid=4000963609';

frosmo.site.products.getDevicePrice()
.then(function(devicePrice){
     console.log(devicePrice);  // 123
});",
          "name": undefined,
          "result": "123",
          "type": "value",
        },
      ],
      "name": undefined,
      "tags": Object {
        "async": Array [],
        "example": Array [
          Object {
            "description": "location.href = 'http://www.play.pl/telefony/glosniki/glosnik-jabra-speak-410/?oid=4000963609';

frosmo.site.products.getDevicePrice()
.then(function(devicePrice){
     console.log(devicePrice);  // 123
});",
            "title": "example",
          },
        ],
        "memberof": Array [
          Object {
            "description": "site.products",
            "title": "memberof",
          },
        ],
        "mock": Array [],
        "name": Array [
          Object {},
        ],
        "param": Array [
          Object {
            "description": "window",
            "name": "global",
            "title": "param",
            "type": Object {
              "expression": Object {
                "name": "Window",
                "type": "NameExpression",
              },
              "type": "OptionalType",
            },
          },
        ],
        "returns": Array [
          Object {
            "description": null,
            "title": "return",
            "type": Object {
              "name": "easy.Promise",
              "type": "NameExpression",
            },
          },
        ],
      },
    },
  ],
}
`;

exports[`Parser detects mocks 1`] = `
Array [
  Object {
    "code": "contains('hey', 'ey'); // true",
    "mocks": Object {
      "contains(1,2)": false,
    },
    "name": "contains",
    "result": "true",
    "type": "value",
  },
]
`;

exports[`Parser happy path works 1`] = `
Array [
  Object {
    "code": "contains('foo', 'fooo'); // false",
    "name": "contains",
    "result": "false",
    "type": "value",
  },
  Object {
    "code": "contains('hey', 'ey'); // true;",
    "name": "contains",
    "result": "true",
    "type": "value",
  },
]
`;

exports[`Parser multiline examples 1`] = `
Array [
  Object {
    "code": "easy.utils.each([1, 2, 3], function (value, index) {
    easy.console.log(index, value);
});",
    "name": "each",
    "result": "",
    "type": "no-throw",
  },
  Object {
    "code": "easy.utils.each({foo: 'bar', baz: 'bar'}, function (value, key) {
    easy.console.log(key, value);
});",
    "name": "each",
    "result": "",
    "type": "no-throw",
  },
  Object {
    "code": "var utils = {
    power: function (base, exponent) {
        return Math.pow(base, exponent);
    }
};

easy.utils.each([1, 2, 3], function (value, index) {
    // \\"this\\" references the utils object where the function \\"power\\" is available
    easy.console.log(index, value, this.power(value));
}, utils);",
    "name": "each",
    "result": "",
    "type": "no-throw",
  },
  Object {
    "code": "easy.utils.each({foo: 'bar', baz: 'bar'}, function (value, key) {
    // \\"this\\" references the global object where the built-in String object is available
    easy.console.log(key, value, this.String.prototype.toUpperCase.call(value));
});",
    "name": "each",
    "result": "",
    "type": "no-throw",
  },
]
`;

exports[`Parser numeral-conjugation.js is parsed correctly 1`] = `
Array [
  Object {
    "code": "numeralConjugation(3, ['osób', 'osoba', 'osoby']); // '3 osoby'",
    "name": "numeralConjugation",
    "result": "\\"3 osoby\\"",
    "type": "value",
  },
  Object {
    "code": "numeralConjugation(11, ['osób', 'osoba', 'osoby']); // '11 osób'",
    "name": "numeralConjugation",
    "result": "\\"11 osób\\"",
    "type": "value",
  },
]
`;

exports[`Parser supports @async 1`] = `
Object {
  "exports": Array [
    "function getFromURL(str) {
    return fetch(str);
}",
  ],
  "imports": Array [
    "getFromURL",
  ],
  "samples": Array [
    Object {
      "examples": Array [
        Object {
          "async": 1,
          "code": "getFromURL('https://mail.google.com/mail/')
  .then(response => response.slice(5).trim()); // \\"world\\"",
          "mocks": Object {
            "fetch('string')": "hello world  ",
          },
          "name": "getFromURL",
          "result": "\\"world\\"",
          "type": "value",
        },
      ],
      "name": "getFromURL",
      "tags": Object {
        "async": Array [
          Object {
            "description": null,
            "title": "async",
          },
        ],
        "example": Array [
          Object {
            "description": "getFromURL('https://mail.google.com/mail/')
  .then(response => response.slice(5).trim()); // \\"world\\"",
            "title": "example",
          },
        ],
        "mock": Array [
          Object {
            "description": "{ 'fetch(\\\\'string\\\\')': 'hello world  ' }",
            "title": "mock",
          },
        ],
        "name": Array [
          Object {
            "description": null,
            "name": "getFromURL",
            "title": "name",
          },
        ],
        "param": Array [
          Object {
            "description": null,
            "name": "str1",
            "title": "param",
            "type": null,
          },
          Object {
            "description": null,
            "name": "str2",
            "title": "param",
            "type": null,
          },
        ],
        "returns": Array [
          Object {
            "description": null,
            "title": "returns",
            "type": Object {
              "elements": Array [
                Object {
                  "type": "AllLiteral",
                },
                Object {
                  "name": "boolean",
                  "type": "NameExpression",
                },
              ],
              "type": "UnionType",
            },
          },
        ],
      },
    },
  ],
}
`;
